port to jwt and detach api module from flask security. this saves round trips and should speed up db tremendously
